[gd_scene load_steps=4 format=3 uid="uid://dkorc7bphdjc7"]

[ext_resource type="Script" path="res://scripts/WaterThing.gd" id="1_sel6x"]
[ext_resource type="Texture2D" uid="uid://dfs40grvda5it" path="res://art/log1.png" id="2_ckupf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sa60r"]
size = Vector2(241, 46)

[node name="WaterThing" type="Node2D"]
script = ExtResource("1_sel6x")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_ckupf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 3)
shape = SubResource("RectangleShape2D_sa60r")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
